--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </li>
           <li class="links__link">
             <p class="links__title">Эл. почта</p>
-            <a class="linsk__link" href="@romanauff">romanmamontov1995@yandex.ru</a>
+            <a class="linsk__link" href="romanmamontov1995@yandex.ru">romanmamontov1995@yandex.ru</a>
           </li>
           <li class="links__link">
             <p class="links__title">ВК</p>
