добавил_параграф_хобби

--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
             <p class="links__title">Доп. образование</p>
             <a class="linsk__link" href="@romanauff">Курсы профессиональной переподготовки по теме: "Quality Assurance. Junior. Middle."</a>
           </li>
+          <li class="links__link">
+            <p class="links__title">Хобби</p>
+            <a class="linsk__link" href="@romanauff">Волейбол</a>
+          </li>
         </ul>
       </section>
     </main>
